--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pn-demo-github",
   "version": "1.0.0",
-  "description": "Dina",
+  "description": "Archu",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
