--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   "dependencies": {
     "axios": "^0.20.1",
     "bootstrap": "^3.4.0",
-    "react": "^16.4.3",
-    "react-dom": "^16.4.10",
-    
+    "react": "^16.4.3"
+       
   },
   "devDependencies": {
     "autoprefixer": "^9.5.1",
@@ -21,7 +20,7 @@
     
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^3.0.0"
    
   
   },
