--- a/package.json
+++ b/package.json
@@ -1,43 +1,67 @@
 {
-  "name": "pn-demo-github",
+  "name": "package-notifier-web",
   "version": "1.0.0",
-  "description": "Dina",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "private": true,
   "dependencies": {
-    "axios": "^0.20.1",
-    "bootstrap": "^3.4.2",
-    "react": "^16.4.3",
-    "react-dom": "^16.4.3",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    
+    "@craco/craco": "~6.0.0",
+    "@microsoft/teams-js": "~1.9.0",
+    "@szhsin/react-menu": "~1.8.0",
+    "@tanem/react-nprogress": "~3.0.55",
+    "axios": "~0.21.1",
+    "react": "~17.0.1",
+    "react-content-loader": "~6.0.1",
+    "react-dom": "~17.0.1",
+    "react-query": "~3.6.1",
+    "react-router-dom": "~5.2.0",
+    "react-scripts": "4.0.1",
+    "react-tooltip": "~4.2.14",
+    "web-vitals": "~0.2.4"
   },
   "devDependencies": {
-    "autoprefixer": "^9.5.1",
-    "babel-plugin-transform-es2015-spread": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^2.1.1",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "url-loader": "^1.1.2",
-    
+    "@tailwindcss/postcss7-compat": "2.0.2",
+    "@testing-library/jest-dom": "~5.11.8",
+    "@testing-library/react": "~11.2.3",
+    "@testing-library/user-event": "~12.6.0",
+    "@types/jest": "~26.0.20",
+    "@types/node": "~12.19.12",
+    "@types/react": "~16.14.2",
+    "@types/react-dom": "~16.9.10",
+    "@types/react-router-dom": "~5.1.7",
+    "@typescript-eslint/eslint-plugin": "~4.13.0",
+    "@typescript-eslint/parser": "~4.13.0",
+    "autoprefixer": "9.8.6",
+    "dotenv": "~8.2.0",
+    "eslint-config-prettier": "~7.1.0",
+    "eslint-plugin-jsx-a11y": "~6.4.1",
+    "eslint-plugin-prettier": "~3.3.1",
+    "eslint-plugin-react": "~7.22.0",
+    "eslint-plugin-react-hooks": "~4.2.0",
+    "eslint-plugin-simple-import-sort": "~7.0.0",
+    "http-proxy-middleware": "~1.0.6",
+    "node-sass": "~4.14.1",
+    "postcss": "7.0.35",
+    "prettier": "~2.2.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@2.0.2",
+    "typescript": "~4.1.3"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/package-notifier-demo/pn-demo-project.git"
+  "scripts": {
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "lint": "eslint --fix ."
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/package-notifier-demo/pn-demo-project/issues"
-  },
-  "homepage": "https://github.com/package-notifier-demo/pn-demo-project#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
