--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pn-demo-github",
   "version": "1.0.0",
-  "description": "Naksh",
+  "description": "Advai Reddy",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,8 +17,7 @@
     "babel-preset-env": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
-    "postcss-loader": "^3.0.0"
-   
+      
   
   },
   "repository": {
