--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "pn-demo-github",
   "version": "1.0.0",
-  "description": "Advai Reddy",
+  "description": "Naksh",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "axios": "^0.20.1",
-    "bootstrap": "^3.4.0",
+    "bootstrap": "^3.4.8",
     "react": "^16.4.3"
        
   },
   "devDependencies": {
     "autoprefixer": "^9.5.1",
-    "babel-preset-env": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
       
