--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pn-demo-github",
   "version": "1.0.0",
-  "description": "Naksh",
+  "description": "Naksh Reddy",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,9 +14,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.5.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^3.21.0",
     "node-sass": "^4.12.0",
-      
+     
   
   },
   "repository": {
