--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "axios": "^0.20.1",
-    "bootstrap": "^3.4.18",
-    "react": "^16.4.13"
-       
+    "axios": "^0.20.0",
+    "bootstrap": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.5.1",
