--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^17.0.0",
     "react-dom": "^16.4.3",
     "react-router-dom": "^4.3.1",
-    "express": "4.17.1",
+    "express": "4.17.1"
     
   },
   "devDependencies": {
