--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "react": "^17.0.0",
     "react-dom": "^16.4.3",
     "react-router-dom": "^4.3.1",
-    "express": "4.17.1"
-    
+    "express": "4.17.1",
+    "multer": "1.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^9.5.1",
