--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "url-loader": "^1.1.2",
-    
+    "html-webpack-plugin": "^3.2.0"
   },
   "repository": {
     "type": "git",
